--- a/README
+++ b/README
@@ -9,6 +9,9 @@ https://en.wikipedia.org/wiki/Primary_motor_cortex
 # upper motor neuron
 https://en.wikipedia.org/wiki/Upper_motor_neuron
 
+# cav1.3
+https://en.wikipedia.org/wiki/Cav1.3
+
 # myelin
 https://en.wikipedia.org/wiki/Myelin
 
