--- a/README
+++ b/README
@@ -12,6 +12,9 @@ https://en.wikipedia.org/wiki/Upper_motor_neuron
 # membrane potential
 https://en.wikipedia.org/wiki/Membrane_potential
 
+# action potential
+https://en.wikipedia.org/wiki/Action_potential
+
 # cav1.3
 https://en.wikipedia.org/wiki/Cav1.3
 
