--- a/README
+++ b/README
@@ -15,6 +15,9 @@ https://en.wikipedia.org/wiki/Membrane_potential
 # action potential
 https://en.wikipedia.org/wiki/Action_potential
 
+# gating
+https://en.wikipedia.org/wiki/Gating_(electrophysiology)
+
 # cav1.3
 https://en.wikipedia.org/wiki/Cav1.3
 
