--- a/README
+++ b/README
@@ -18,6 +18,9 @@ https://en.wikipedia.org/wiki/Action_potential
 # gating
 https://en.wikipedia.org/wiki/Gating_(electrophysiology)
 
+# poisson's equation
+https://en.wikipedia.org/wiki/Poisson%27s_equation
+
 # cav1.3
 https://en.wikipedia.org/wiki/Cav1.3
 
