--- a/README
+++ b/README
@@ -27,4 +27,7 @@ https://en.wikipedia.org/wiki/Cav1.3
 # myelin
 https://en.wikipedia.org/wiki/Myelin
 
+# catatonia
+https://en.wikipedia.org/wiki/Catatonia
+
 doctor robin in action
